--- a/Pages/TeamData/Fielding.cshtml
+++ b/Pages/TeamData/Fielding.cshtml
@@ -30,18 +30,19 @@
 <p id="statDescription" class="stat-desc" style="margin-left: 10px; color: #93c5fd;"></p>
 
 <!-- Tabla de estadísticas de fildeo por equipo -->
-<table class="table table-striped table-bordered table-sm pitching-table" style="margin: 1 auto;">
+<table class="table table-striped table-bordered sortable-table table-sm pitching-table" style="margin: 1 auto;">
     <thead>
         <tr>
-            <th>#</th>
-            <th>Team</th>
-            <th>Games</th>
-            <th>Season</th>
-            <th>Last 3</th>
-            <th>Last 1</th>
-            <th>Home</th>
-            <th>Away</th>
-            <th>Previous</th>
+
+            <th data-sortable data-type="number">#</th>
+            <th data-sortable data-type="string">Team</th>
+            <th data-sortable data-type="number">Games</th>
+            <th data-sortable data-type="number">Season</th>
+            <th data-sortable data-type="number">Last 3</th>
+            <th data-sortable data-type="number">Last 1</th>
+            <th data-sortable data-type="number">Home</th>
+            <th data-sortable data-type="number">Away</th>
+            <th data-sortable data-type="number">Previous</th>
         </tr>
     </thead>
     <tbody>
