--- a/Pages/TeamData/Pitching.cshtml
+++ b/Pages/TeamData/Pitching.cshtml
@@ -18,18 +18,18 @@
 
 <!-- Tabla básica (MLB hasta AVG) -->
 <div id="basicTable">
-    <table class="table table-striped table-bordered table-sm table-with-tooltips">
+    <table class="table table-striped table-bordered sortable-table table-sm table-with-tooltips">
         <thead>
             <tr>
-                <th>#</th>
-                <th>Team</th>
-                <th>Games</th>
+                <th data-sortable data-type="number">#</th>
+                <th data-sortable data-type="string">Team</th>
+                <th data-sortable data-type="number">Games</th>
                 @foreach (var statName in Model.BasicStatNames)
                 {
                     var hasMeta = Model.StatMeta.TryGetValue(statName, out var meta);
                     if (hasMeta && !string.IsNullOrWhiteSpace(meta!.Description))
                     {
-                        <th>
+                        <th data-sortable data-type="number">
                             <span class="stat-head">
                                 <span class="stat-abbr" title="" tabindex="0" aria-label="@meta.LongName"
                                     aria-describedby="tip-@statName">@statName</span>
@@ -86,18 +86,18 @@
 
 <!-- Tabla avanzada (resto de MLB + TeamRankings) -->
 <div id="advancedTable" style="display:none;">
-    <table class="table table-striped table-bordered table-sm pitching-table table-with-tooltips">
+    <table class="table table-striped table-bordered sortable-table table-sm pitching-table table-with-tooltips">
         <thead>
             <tr>
-                <th>#</th>
-                <th>Team</th>
-                <th>Games</th>
+                <th data-sortable data-type="number">#</th>
+                <th data-sortable data-type="string">Team</th>
+                <th data-sortable data-type="number">Games</th>
                 @foreach (var statName in Model.AdvancedStatNames)
                 {
                     var hasMeta = Model.StatMeta.TryGetValue(statName, out var meta);
                     if (hasMeta && !string.IsNullOrWhiteSpace(meta!.Description))
                     {
-                        <th>
+                        <th data-sortable data-type="number">
                             <span class="stat-head">
                                 <span class="stat-abbr" title="" tabindex="0" aria-label="@meta.LongName"
                                     aria-describedby="tip-@statName">@statName</span>
