--- a/Pages/TeamData/WinTrends.cshtml
+++ b/Pages/TeamData/WinTrends.cshtml
@@ -25,14 +25,14 @@
 </form>
 
 <!-- Tabla de resultados -->
-<table class="table table-striped table-bordered table-sm pitching-table"
+<table class="table table-striped sortable-table table-bordered table-sm pitching-table"
        style="margin: 1 auto;">
     <thead>
         <tr>
-            <th>#</th>
-            <th>Team</th>
+            <th data-sortable data-type="number">#</th>
+            <th data-sortable data-type="string">Team</th>
             <th>Win-Loss Record</th>
-            <th>Win %</th>
+            <th data-sortable data-type="number">Win %</th>
         </tr>
     </thead>
     <tbody>
